unpackaged/main/default/objects/Q9__BatchLog__c/Q9__BatchLog__c.object-meta.xml
<CustomObject>
    <description>It's object for temporary records, please DO NOT use this object for your targets.</description>
    <label>Batch Log</label>
    <nameField>
        <displayFormat>BL-{000000}</displayFormat>
        <label>BatchLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>