unpackaged/main/default/objects/Q9__BatchLog__c/fields/Q9__Log__c.field-meta.xml
<CustomField>
    <fullName>Q9__Log__c</fullName>
    <label>Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>