unpackaged/main/default/objects/Q9__BatchLog__c/fields/Q9__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>Q9__ObjectName__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>