unpackaged/main/default/objects/Q9__BatchLog__c/fields/Q9__RecordType__c.field-meta.xml
<CustomField>
    <fullName>Q9__RecordType__c</fullName>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>