unpackaged/main/default/objects/Q9__BatchLog__c/fields/Q9__Type__c.field-meta.xml
<CustomField>
    <fullName>Q9__Type__c</fullName>
    <description>Show to which one batch log is related.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Population Batch Log</fullName>
            </value>
            <value>
                <fullName>Scheduled Data Population Log</fullName>
            </value>
            <value>
                <fullName>Picklist Values Population</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>