unpackaged/main/default/objects/Q9__BatchLog__c/fields/Q9__Type_String__c.field-meta.xml
<CustomField>
    <fullName>Q9__Type_String__c</fullName>
    <label>Type String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>